fix mobile/native menu z-index issue (#2235)

--- a/less/bootstrap-select.less
+++ b/less/bootstrap-select.less
@@ -73,7 +73,7 @@ select.selectpicker {
       left: 0;
       display: block !important;
       width: 100% !important;
-      z-index: 2;
+      z-index: 2 !important;
     }
   }
 
