--- a/sass/bootstrap-select.scss
+++ b/sass/bootstrap-select.scss
@@ -91,7 +91,7 @@ select.selectpicker {
       left: 0;
       display: block !important;
       width: 100% !important;
-      z-index: 2;
+      z-index: 2 !important;
     }
   }
 
